[package]
name = "tex"
version = "0.0.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.75"
async-recursion = "1.0.5"
axum = "0.6.20"
base64 = "0.21.4"
futures = "0.3.28"
hmac = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
